tests/snapshots/layout_snapshots__cjk-emoji.plain.snap
---
source: tests/layout_snapshots.rs
expression: "plain(\"cjk-emoji\")"
---
━━ width 24 ━━━━━━━━━━━━
日本語の見出し
════════════════════

日本語のテキストは単
語の間にスペースがあ
りませんが、正しく折
り返す必要がありま
す。これは長い文で
す。

中文文本也需要正确换
行，因为汉字之间可以
断行。

한국어 문장은 띄어쓰
기를 사용합니다. 그
래서 공백에서 줄을
바꿉니다.

Emoji: 🎉 ❤️ 👍🏽 🇺🇸
👨‍👩‍👧 — each is two
columns wide.

Mixed: English and
日本語 and emoji 👍
in one line that
wraps somewhere.

Combining: é â stay
one column.

╭────┬──────╮
│ 列 │ 値   │
├────┼──────┤
│ 幅 │ 二列 │
╰────┴──────╯

• 箇条書き
• リスト項目がとても
  長い場合は折り返さ
  れて、ぶら下げイン
  デントが保たれます

▎ 引用も折り返されま
▎ すが、バーはすべて
▎ の行に表示されま
▎ す。

Full-width: ＡＢＣ１
２３
━━ width 40 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━
日本語の見出し
════════════════════════════════════

日本語のテキストは単語の間にスペース
がありませんが、正しく折り返す必要が
あります。これは長い文です。

中文文本也需要正确换行，因为汉字之间
可以断行。

한국어 문장은 띄어쓰기를 사용합니다.
그래서 공백에서 줄을 바꿉니다.

Emoji: 🎉 ❤️ 👍🏽 🇺🇸 👨‍👩‍👧 — each is two
columns wide.

Mixed: English and 日本語 and emoji
👍 in one line that wraps somewhere.

Combining: é â stay one column.

╭────┬──────╮
│ 列 │ 値   │
├────┼──────┤
│ 幅 │ 二列 │
╰────┴──────╯

• 箇条書き
• リスト項目がとても長い場合は折り返
  されて、ぶら下げインデントが保たれ
  ます

▎ 引用も折り返されますが、バーはすべ
▎ ての行に表示されます。

Full-width: ＡＢＣ１２３
━━ width 80 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
日本語の見出し
════════════════════════════════════════════════════════════════════════════

日本語のテキストは単語の間にスペースがありませんが、正しく折り返す必要があり
ます。これは長い文です。

中文文本也需要正确换行，因为汉字之间可以断行。

한국어 문장은 띄어쓰기를 사용합니다. 그래서 공백에서 줄을 바꿉니다.

Emoji: 🎉 ❤️ 👍🏽 🇺🇸 👨‍👩‍👧 — each is two columns wide.

Mixed: English and 日本語 and emoji 👍 in one line that wraps somewhere.

Combining: é â stay one column.

╭────┬──────╮
│ 列 │ 値   │
├────┼──────┤
│ 幅 │ 二列 │
╰────┴──────╯

• 箇条書き
• リスト項目がとても長い場合は折り返されて、ぶら下げインデントが保たれます

▎ 引用も折り返されますが、バーはすべての行に表示されます。

Full-width: ＡＢＣ１２３
━━ width 120 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
日本語の見出し
════════════════════════════════════════════════════════════════════════════════════════════════════

日本語のテキストは単語の間にスペースがありませんが、正しく折り返す必要があります。これは長い文です。

中文文本也需要正确换行，因为汉字之间可以断行。

한국어 문장은 띄어쓰기를 사용합니다. 그래서 공백에서 줄을 바꿉니다.

Emoji: 🎉 ❤️ 👍🏽 🇺🇸 👨‍👩‍👧 — each is two columns wide.

Mixed: English and 日本語 and emoji 👍 in one line that wraps somewhere.

Combining: é â stay one column.

╭────┬──────╮
│ 列 │ 値   │
├────┼──────┤
│ 幅 │ 二列 │
╰────┴──────╯

• 箇条書き
• リスト項目がとても長い場合は折り返されて、ぶら下げインデントが保たれます

▎ 引用も折り返されますが、バーはすべての行に表示されます。

Full-width: ＡＢＣ１２３
