tests/snapshots/layout_snapshots__footnotes.plain.snap
---
source: tests/layout_snapshots.rs
expression: "plain(\"footnotes\")"
---
━━ width 24 ━━━━━━━━━━━━
A sentence with a
footnote.¹ Another
one.² And the first
again.¹

A footnote with
several paragraphs.³

An undefined
reference[^missing]
stays as text.

── Footnotes ───────

1. The first
   footnote. ↑ ↑²

2. A named footnote
   with a link[1]. ↑

3. The first
   paragraph of a
   long footnote.

   The second
   paragraph,
   indented.

   ┌───────────────┐
   │ code in a foo │
   │↳tnote         │
   └───────────────┘
   ↑

[1]: https://
     example.com
━━ width 40 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━
A sentence with a footnote.¹ Another
one.² And the first again.¹

A footnote with several paragraphs.³

An undefined reference[^missing]
stays as text.

── Footnotes ───────────────────────

1. The first footnote. ↑ ↑²

2. A named footnote with a link[1].
   ↑

3. The first paragraph of a long
   footnote.

   The second paragraph, indented.

   ┌───────────────────────────────┐
   │ code in a footnote            │
   └───────────────────────────────┘
   ↑

[1]: https://example.com
━━ width 80 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
A sentence with a footnote.¹ Another one.² And the first again.¹

A footnote with several paragraphs.³

An undefined reference[^missing] stays as text.

── Footnotes ───────────────────────────────────────────────────────────────

1. The first footnote. ↑ ↑²

2. A named footnote with a link[1]. ↑

3. The first paragraph of a long footnote.

   The second paragraph, indented.

   ┌───────────────────────────────────────────────────────────────────────┐
   │ code in a footnote                                                    │
   └───────────────────────────────────────────────────────────────────────┘
   ↑

[1]: https://example.com
━━ width 120 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
A sentence with a footnote.¹ Another one.² And the first again.¹

A footnote with several paragraphs.³

An undefined reference[^missing] stays as text.

── Footnotes ───────────────────────────────────────────────────────────────────────────────────────

1. The first footnote. ↑ ↑²

2. A named footnote with a link[1]. ↑

3. The first paragraph of a long footnote.

   The second paragraph, indented.

   ┌───────────────────────────────────────────────────────────────────────────────────────────────┐
   │ code in a footnote                                                                            │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘
   ↑

[1]: https://example.com
