tests/snapshots/layout_snapshots__headings.plain.snap
---
source: tests/layout_snapshots.rs
expression: "plain(\"headings\")"
---
━━ width 24 ━━━━━━━━━━━━
Heading level one
════════════════════

Text under the first
heading.

Heading level two
with a styled word
and `code`
────────────────────

▎ Heading level
  three

Heading level four

Heading level five

Heading level six

A very long first-
level heading that
has to wrap across
several lines at
narrow widths
════════════════════

Another second-level
heading that is long
enough to wrap onto
a second line
────────────────────

Setext heading
════════════════════

Setext level two
────────────────────

Duplicate
────────────────────

Duplicate
────────────────────

════════════════════

Trailing hashes
────────────────────

▎ A linked
  heading[1]

[1]: https://
     example.com
━━ width 40 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Heading level one
════════════════════════════════════

Text under the first heading.

Heading level two with a styled word
and `code`
────────────────────────────────────

▎ Heading level three

Heading level four

Heading level five

Heading level six

A very long first-level heading that
has to wrap across several lines at
narrow widths
════════════════════════════════════

Another second-level heading that is
long enough to wrap onto a second
line
────────────────────────────────────

Setext heading
════════════════════════════════════

Setext level two
────────────────────────────────────

Duplicate
────────────────────────────────────

Duplicate
────────────────────────────────────

════════════════════════════════════

Trailing hashes
────────────────────────────────────

▎ A linked heading[1]

[1]: https://example.com
━━ width 80 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Heading level one
════════════════════════════════════════════════════════════════════════════

Text under the first heading.

Heading level two with a styled word and `code`
────────────────────────────────────────────────────────────────────────────

▎ Heading level three

Heading level four

Heading level five

Heading level six

A very long first-level heading that has to wrap across several lines at
narrow widths
════════════════════════════════════════════════════════════════════════════

Another second-level heading that is long enough to wrap onto a second line
────────────────────────────────────────────────────────────────────────────

Setext heading
════════════════════════════════════════════════════════════════════════════

Setext level two
────────────────────────────────────────────────────────────────────────────

Duplicate
────────────────────────────────────────────────────────────────────────────

Duplicate
────────────────────────────────────────────────────────────────────────────

════════════════════════════════════════════════════════════════════════════

Trailing hashes
────────────────────────────────────────────────────────────────────────────

▎ A linked heading[1]

[1]: https://example.com
━━ width 120 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Heading level one
════════════════════════════════════════════════════════════════════════════════════════════════════

Text under the first heading.

Heading level two with a styled word and `code`
────────────────────────────────────────────────────────────────────────────────────────────────────

▎ Heading level three

Heading level four

Heading level five

Heading level six

A very long first-level heading that has to wrap across several lines at narrow widths
════════════════════════════════════════════════════════════════════════════════════════════════════

Another second-level heading that is long enough to wrap onto a second line
────────────────────────────────────────────────────────────────────────────────────────────────────

Setext heading
════════════════════════════════════════════════════════════════════════════════════════════════════

Setext level two
────────────────────────────────────────────────────────────────────────────────────────────────────

Duplicate
────────────────────────────────────────────────────────────────────────────────────────────────────

Duplicate
────────────────────────────────────────────────────────────────────────────────────────────────────

════════════════════════════════════════════════════════════════════════════════════════════════════

Trailing hashes
────────────────────────────────────────────────────────────────────────────────────────────────────

▎ A linked heading[1]

[1]: https://example.com
